fix long text jump on hover

--- a/src/styles/components/_drag-items.scss
+++ b/src/styles/components/_drag-items.scss
@@ -12,7 +12,7 @@
   &__list {
     min-height: 5rem;
     padding: 1rem;
-    --display: none;
+    --visibility: hidden;
 
     @include respond(mobile) {
       padding: 0;
@@ -52,11 +52,11 @@
         display: flex;
         align-items: center;
         height: 100%;
+        visibility: var(--visibility);
         background-color: rgba(255, 0, 0, 0.4);
         border-radius: 0 1rem 1rem 0;
 
         &-img {
-          display: var(--display);
           font-size: 1rem;
           text-align: center;
           line-height: 3;
